--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         <!-- App Related Stuff -->
         <link rel="icon" type="image/png" href="favicon.png" />
-        <link rel="apple-touch-icon" href="images/favicon.png">
+        <link rel="apple-touch-icon" href="images/Favicon.png">
         <meta name="apple-mobile-web-app-title" content="Virtual Trainer">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black">
