--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="style.css">
 
         <!-- App Related Stuff -->
-        <link rel="icon" type="image/png" href="favicon.png" />
+        <link rel="icon" type="image/png" href="Favicon.png" />
         <link rel="apple-touch-icon" href="images/Favicon.png">
         <meta name="apple-mobile-web-app-title" content="Virtual Trainer">
         <meta name="apple-mobile-web-app-capable" content="yes">
