--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <link rel="stylesheet" href="style.css">
 
         <!-- App Related Stuff -->
-        <link rel="icon" type="image/png" href="Favicon.png" />
-        <link rel="apple-touch-icon" href="images/Favicon.png">
+        <link rel="icon" type="image/png" href="images/favicon.png?v=2" />
+        <link rel="apple-touch-icon" href="images/favicon.png?v=2">
         <meta name="apple-mobile-web-app-title" content="Virtual Trainer">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black">
